name:                hasklet-store
version:             0.1.0.0
synopsis:            Versioned content store with a rest api
description:         Versioned content store with a rest api
homepage:            https://github.com/githubuser/hasklet-store#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          Ian Sullivan
copyright:           2017 Ian Sullivan
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -W
  exposed-modules:     Hasklet.Store.Web
                     , Hasklet.Store.Database
                     , Hasklet.Store.Transform
                     , Hasklet.Store.Types
  build-depends:       base >= 4.7 && < 5
                     , servant
                     , servant-server
                     , sqlite-simple
                     , resource-pool
                     , text
                     , bytestring
                     , time
                     , unordered-containers
                     , uuid
                     , aeson
                     , scientific
                     , mtl
                     , transformers
  default-language:    Haskell2010

executable hasklet-store
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -W
  build-depends:       base
                     , hasklet-store
                     , directory
                     , filepath
                     , warp
                     , optparse-applicative
  default-language:    Haskell2010

test-suite hasklet-store-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hasklet-store
                     , HUnit
                     , hspec
                     , hspec-expectations
                     , hspec-wai
                     , wai
                     , wai-extra
                     , bytestring
                     , text
                     , aeson
                     , http-types
                     , uuid
                     , vector
                     , http-api-data
                     , time
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -W
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hasklet-store
